force-app/main/default/objects/Availability_History__c/fields/Available_Slot__c.field-meta.xml
<CustomField>
    <fullName>Available_Slot__c</fullName>
    <label>Available Slot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>