force-app/main/default/objects/Availability_History__c/fields/Customer_DateTime_Input__c.field-meta.xml
<CustomField>
    <fullName>Customer_DateTime_Input__c</fullName>
    <label>Customer DateTime Input</label>
    <length>50</length>
    <type>Text</type>
</CustomField>