force-app/main/default/objects/Availability_History__c/fields/Customer_UUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_UUID__c</fullName>
    <label>Customer UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>