force-app/main/default/objects/Availability_History__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End DateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>