force-app/main/default/objects/Availability_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Availability History</relationshipLabel>
    <relationshipName>Availability_History</relationshipName>
    <type>Lookup</type>
</CustomField>