force-app/main/default/objects/Availability_History__c/fields/Product_UUID__c.field-meta.xml
<CustomField>
    <fullName>Product_UUID__c</fullName>
    <label>Product UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>