force-app/main/default/objects/Availability_History__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start DateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>